2005-10-06  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.8 ========================
	* 

2005-04-05  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* profiler.man: Synchronized indexed and provided versions.
	* pkgIndex.tcl

2005-03-30  Eric Melski  <ericm@electric-cloud.com>

	* profiler.tcl (::profiler::TraceHandler): Make sure that caller names
	always have a :: prefix, to avoid getting confused by "::foo" versus
	"foo", which actually refer to the same procedure [Bug 1172938].
	Incremented version number to 0.2.3.

	* profiler.test: Added tests to verify fix for Bug 1172938.

2004-10-05  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.7 ========================
	* 

2004-05-23  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.6.1 ========================
	* 

2004-02-15  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.6 ========================
	* 

2004-02-12  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* profiler.tcl (stats): Bugfix by Bob Techentin, preventing a
	  division by zero if the average time has become zero.

2003-10-29  Andreas Kupries  <andreask@activestate.com>

	* profiler.man: Updated documented signature of 'reset', missed
	  the pattern argument [Bug 832487].

2003-05-05  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.4 ========================
	* 

2003-05-02  Andreas Kupries  <andreask@activestate.com>

	* profiler.test: found a test failing for 8.5 due to incomplete
	  auto_path propagation and setup. Fixed.

2003-04-29  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* profiler.tcl (::profiler::stats): Check for sum being zero when
	using tcl < 8.4 (no execution trace available). Prevents a divide
	by zero error.

2003-04-13  Andreas Kupries <andreas_kupries@users.sourceforge.net>
